# poepoe

./: README.md  main.py  pyproject.toml  scrapy.cfg  shared_dependencies.md
.rules/: prevent-customer-logs.md
poe_scraper/poe_scraper/: items.py  pipelines.py  settings.py
poe_scraper/poe_scraper/spiders/: poe_spider.py
web_scraper/: clojure_version.clj  items.py  middlewares.py  pipelines.py  scrapy_spider.py  settings.py
