[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = "A web scraping tool to extract data from Poe.com"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"